2004-08-09  Roland McGrath  <roland@frob.com>

	* manual/install.texi (Supported Configurations): Replace bug-glibc
	mention with web URL.
	* INSTALL: Regenerated.
	* locale/iso-3166.def: Likewise, in comment.
	* locale/iso-4217.def: Likewise.
	* locale/iso-639.def: Likewise.
	* posix/cpio.h: Remove bug reporting comment.

2004-08-09  Ulrich Drepper  <drepper@redhat.com>

	* libio/bits/stdio.h (fread_unlocked): Add a couple of (size_t)
	casts to handle funny calls with floating point argument values
	and signed values correctly and without warning.
	(fwrite_unlocked): Likewise.  [BZ #309]

	* malloc/memusage.c (me): Use creat64, not creat.
	* malloc/memusagestat.c: Fix handling of very large sizes.  [BZ #285]
	Patch by Guy Maor <guymaor@yahoo.com>.

	* elf/ldconfig.c (options): Mark parameter option names as
	translatable.  [BZ #253]  Patch by Jakub Bogusz <qboosh@pld-linux.org>.

	* iconv/gconv_charset.h (strip): Also allow comma which is what is
	used to separate options.  [BZ #194]

2004-08-09  Roland McGrath  <roland@redhat.com>

	* FAQ.in: Refer to web pages instead of bug-glibc.
	* FAQ: Regenerated.

	* time/strptime_l.c: #include <stdbool.h>, `bool' used in last change.

2004-08-09  Ulrich Drepper  <drepper@redhat.com>

	* time/tzset.c (tzset_internal): If TZ is not set do not compare
	old and new tz value since it might be /etc/localtime in both
	cases although the file changed.  [BZ #154]
	Patch by Christian Franke <franke@computer.org>.

	* time/tzfile.c (__tzfile_read): Determine dev/ino of file.
	Compare with values of previously opened file.  Don't do anything
	is they match.

2004-08-08  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object): If __RTLD_CALLMAP flag is set,
	reset loader before the actual loading.
	* elf/dl-open.c (dl_open_worker): If file name contains no path
	element determine map of caller.  Pass caller map in this case to
	_dl_map_object.  Set __RTLD_CALLMAP in mode.